# sphinxcontrib-diagrams

./: README.rst  pyproject.toml
docker/: Dockerfile
sphinxcontrib/: diagrams.py
testdoc/: Makefile
testdoc/source/: conf.py  index.rst
testdoc/source/_static/: サンプル.drawio
testdoc/source/one/: index.rst
testdoc/source/one/_static/: sample.drawio
testdoc/source/two/: index.rst
testdoc/source/two/_static/: sample.drawio
