[tool.poetry]
name = "sphinxcontrib-diagrams"
version = "0.1.1"
description = ""
authors = ["yamionp <yami@crimsondream.jp>"]
packages = [
    { include = "sphinxcontrib/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
sphinx = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
